--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-navs">
+                <div class="navbar-nav">
                   <a class="nav-link active" aria-current="page" href="#">Home</a>
                   <a class="nav-link" href="#">Support Desk</a>
                   <a class="nav-link" href="#"><span>My Account</span></a>
